{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 36,
  "lineage": "26a07f5d-1a77-b8a8-5704-5b776673e821",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:166025675743:vpc/vpc-8650aced",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-e94cb282",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-5bfd2c30",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-8650aced",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-2cad2947",
            "owner_id": "166025675743",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:166025675743:loadbalancer/app/terraform-asg-example/a7906a6c0df9a7c5",
            "arn_suffix": "app/terraform-asg-example/a7906a6c0df9a7c5",
            "dns_name": "terraform-asg-example-1908807885.us-east-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:166025675743:loadbalancer/app/terraform-asg-example/a7906a6c0df9a7c5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-asg-example",
            "security_groups": [
              "sg-044d96918bf4a6607"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-7064e13c"
              },
              {
                "subnet_id": "subnet-be8166d5"
              },
              {
                "subnet_id": "subnet-dc510ca6"
              }
            ],
            "subnets": [
              "subnet-7064e13c",
              "subnet-be8166d5",
              "subnet-dc510ca6"
            ],
            "vpc_id": "vpc-8650aced",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "depends_on": [
            "aws_security_group.alb",
            "data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:166025675743:listener/app/terraform-asg-example/a7906a6c0df9a7c5/b1e2848da9c9e91d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:166025675743:listener/app/terraform-asg-example/a7906a6c0df9a7c5/b1e2848da9c9e91d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:166025675743:loadbalancer/app/terraform-asg-example/a7906a6c0df9a7c5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:166025675743:targetgroup/terraform-asg-example/c579f73b41ff8b8f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:166025675743:listener-rule/app/terraform-asg-example/a7906a6c0df9a7c5/b1e2848da9c9e91d/2644f50801fff30a",
            "condition": [
              {
                "field": "path-pattern",
                "values": [
                  "*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:166025675743:listener-rule/app/terraform-asg-example/a7906a6c0df9a7c5/b1e2848da9c9e91d/2644f50801fff30a",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:166025675743:listener/app/terraform-asg-example/a7906a6c0df9a7c5/b1e2848da9c9e91d",
            "priority": 100
          },
          "depends_on": [
            "aws_lb_listener.http",
            "aws_lb_target_group.asg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:166025675743:targetgroup/terraform-asg-example/c579f73b41ff8b8f",
            "arn_suffix": "targetgroup/terraform-asg-example/c579f73b41ff8b8f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:166025675743:targetgroup/terraform-asg-example/c579f73b41ff8b8f",
            "lambda_multi_value_headers_enabled": false,
            "name": "terraform-asg-example",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-8650aced"
          },
          "depends_on": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:166025675743:security-group/sg-044d96918bf4a6607",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044d96918bf4a6607",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-alb",
            "name_prefix": null,
            "owner_id": "166025675743",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-8650aced"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:166025675743:security-group/sg-03429f329acb44a45",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-03429f329acb44a45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-example-instance",
            "name_prefix": null,
            "owner_id": "166025675743",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-8650aced"
          }
        }
      ]
    }
  ]
}